# MiniLooper

./: .gitignore  CMakeLists.txt  README.md
faust/: CMakeLists.txt  build_dsp.py
faust/faust_dsp/: test.dsp
faust/include/faust/: faustMinimalInlined.h
src/: audio_engine.cpp  audio_engine.h  main.cpp  spsc_mailbox.h
src/audio/: audio_backend.h  audio_engine.cpp  audio_engine.h  portaudio_backend.cpp  portaudio_backend.h  rtaudio_backend.cpp  rtaudio_backend.h
src/looper/: looper.cpp  looper.h  looper_commands.cpp  looper_commands.h
